refactor: '설정 항목' 에 해당하는 이름을 가독성있게 변경